Commit 2 10:45AM Files modified - [Main,VCADB_users,webapp]

--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -23,5 +23,5 @@
             </wm-container>
         </wm-page-content>
     </wm-content>
-    <wm-mobile-tabbar dataset="home,music,edit" name="mobile_tabbar1"></wm-mobile-tabbar>
+    <wm-mobile-tabbar dataset="Logout" name="mobile_tabbar1" on-select="Actions.logoutAction.invoke()"></wm-mobile-tabbar>
 </wm-page>
