--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,16 +15,20 @@
     <!-- Print CSS -->
     <link rel="stylesheet" href="print.css" type="text/css" media="print" />
     <!--fav icon-->
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="//dh2dw20653ig1.cloudfront.net/studio-app/9.4.0.1.5546/wmmobile/styles/css/wm-style.css">
-    <!-- theme --><link rel="stylesheet" href="themes/mobile/android/style.css"  theme="wmtheme"><!-- /theme -->
+    <!-- theme -->
+    <link rel="stylesheet" href="themes/mobile/android/style.css" theme="wmtheme">
+    <!-- /theme -->
     <link rel="stylesheet" href="app.css">
 </head>
+
 <body class="wm-app" data-ng-app="Application" id="ng-app" data-ng-controller="AppController">
-<div id="wm-app-content"></div>
-<div id="wm-common-content"></div>
-<wm-spinner name="globalspinner" classname="global-spinner" caption=""></wm-spinner>
-<toaster-container toaster-options="{'limit': 1,'time-out': 2000, 'position-class': 'toast-bottom-right'}"></toaster-container>
-<wm-network-info-toaster></wm-network-info-toaster>
+    <div id="wm-app-content"></div>
+    <div id="wm-common-content"></div>
+    <wm-spinner name="globalspinner" classname="global-spinner" caption=""></wm-spinner>
+    <!--<toaster-container toaster-options="{'limit': 1,'time-out': 2000, 'position-class': 'toast-bottom-right'}"></toaster-container>-->
+    <!--<wm-network-info-toaster></wm-network-info-toaster>-->
 </body>
+
 </html>
