Commit Thursday October 18th 12:15PM New files added - [Attendees,Register,adminMenu,android,blue-flyer,fonts,fonts,imagelists,ios,android] Files modified - [AddEvent,AddVenue,EditEvents,EventDetails,EventsList,Login,Main,VCADB_users,securityService,webapp,.wmproject.properties,project-security.xml,pages-config.json] Removed files - [SignUp,android,fonts,fonts,ios,mobile]

--- a/src/main/webapp/pages/AddVenue/AddVenue.html
+++ b/src/main/webapp/pages/AddVenue/AddVenue.html
@@ -4,7 +4,7 @@
     </wm-mobile-navbar>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-liveform errormessage="" title="Venues Info" iconclass="wi wi-edit" formlayout="inline" defaultmode="Edit" dataset="bind:Variables.VCADB_usersVenuesData.dataSet" captionalign="left" captionposition="top" name="VenuesLiveForm1">
+            <wm-liveform errormessage="" title="Venues Info" iconclass="wi wi-edit" formlayout="inline" defaultmode="Edit" dataset="bind:Variables.VCADB_usersVenuesData.dataSet" captionalign="left" captionposition="top" name="VenuesLiveForm1" on-success="Actions.goToPage_adminMenu.invoke()">
                 <wm-layoutgrid columns="1" name="layoutgrid1">
                     <wm-gridrow name="gridrow1">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn1">
