--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -17,9 +17,7 @@
     <!--fav icon-->
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="//dh2dw20653ig1.cloudfront.net/studio-app/9.4.0.1.5546/wmmobile/styles/css/wm-style.css">
-    <!-- theme -->
-    <link rel="stylesheet" href="themes/mobile/android/style.css" theme="wmtheme">
-    <!-- /theme -->
+    <!-- theme --><link rel="stylesheet" href="themes/blue-flyer/android/style.css" theme="wmtheme"/><!-- /theme -->
     <link rel="stylesheet" href="app.css">
 </head>
 
