--- a/src/main/webapp/pages/EditEvents/EditEvents.html
+++ b/src/main/webapp/pages/EditEvents/EditEvents.html
@@ -4,34 +4,17 @@
     </wm-mobile-navbar>
     <wm-content name="content1">
         <wm-page-content columnwidth="12" name="page_content1">
-            <wm-container name="container1">
-                <wm-container name="container5">
-                    <wm-layoutgrid name="layoutgrid2">
-                        <wm-gridrow name="gridrow10">
-                            <wm-gridcolumn columnwidth="4" name="gridcolumn14">
-                                <wm-anchor margin="unset 0.5em" name="anchor3" on-tap="Actions.goToPage_AddEvent.invoke()" caption="Add Event" on-doubletap="Actions.goToPage_AddEvents.invoke()"></wm-anchor>
-                            </wm-gridcolumn>
-                            <wm-gridcolumn columnwidth="4" name="gridcolumn15">
-                                <wm-anchor margin="unset 0.5em" name="anchor4" caption="Add Venue" on-tap="Actions.goToPage_AddVenue.invoke()"></wm-anchor>
-                            </wm-gridcolumn>
-                            <wm-gridcolumn columnwidth="4" name="gridcolumn11">
-                                <wm-anchor margin="unset 0.5em" name="anchor5" caption="Edit Venues" on-tap="Actions.goToPage_EditVenues.invoke()"></wm-anchor>
-                            </wm-gridcolumn>
-                        </wm-gridrow>
-                        <wm-gridrow name="gridrow11"></wm-gridrow>
-                    </wm-layoutgrid>
-                </wm-container>
-            </wm-container>
+            <wm-container name="container1"></wm-container>
             <wm-list listclass="list-group" itemclass="list-group-item media" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" name="EventsList1" dataset="bind:Variables.VCADB_usersEventsData.dataSet" navigation="Pager">
                 <wm-listtemplate layout="media" name="listtemplate1">
                     <wm-container class="media-left" name="container2"></wm-container>
                     <wm-container class="media-body" name="container3">
                         <wm-label caption="bind:Variables.VCADB_usersEventsData.dataSet.eventname" name="Name" class="p media-heading"></wm-label>
-                        <wm-label caption="bind:Variables.VCADB_usersEventsData.dataSet.eventdetails" class="p text-muted" name="Title"></wm-label>
+                        <wm-button class="btn-default" caption="See who's going" type="button" margin="unset 0.5em" name="button3" iconclass="wi wi-people fa-2x" on-tap="Actions.goToPage_Attendees.invoke()"></wm-button>
                     </wm-container>
-                    <wm-container class="media-right media-top" width="20%" name="container9" horizontalalign="right">
+                    <wm-container class="media-right media-top" width="20%" name="container9" horizontalalign="right" padding="4px 10px unset 10px">
                         <wm-buttongroup name="buttongroup1">
-                            <wm-button class="btn-transparent edit-list-item" caption="" name="button1" iconclass="wi wi-pencil fa-2x" margin="unset 0.2em unset unset"></wm-button>
+                            <wm-button class="btn-transparent edit-list-item" caption="" name="button1" iconclass="wi wi-pencil fa-2x" margin="unset 0.2em unset unset" padding="unset unset 10px unset"></wm-button>
                             <wm-button class="btn-transparent delete-list-item" caption="" name="button2" iconclass="wi wi-trash fa-2x"></wm-button>
                         </wm-buttongroup>
                     </wm-container>
