--- a/src/main/webapp/pages/EventsList/EventsList.html
+++ b/src/main/webapp/pages/EventsList/EventsList.html
@@ -8,14 +8,14 @@
                 <wm-list listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" name="executeEventsListList1" dataset="bind:Variables.VCADB_usersExecuteEventsList.dataSet" navigation="Pager">
                     <wm-listtemplate layout="inline" name="listtemplate1">
                         <wm-container class="media-left" name="container2"></wm-container>
-                        <wm-container class="media-body" padding="unset unset unset 1.25em" name="container3">
+                        <wm-container class="media-body" padding="unset unset unset 1.25em" name="container3" on-tap="Actions.goToPage_EventDetails.invoke()">
                             <wm-label name="Name" class="p media-heading" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.eventname" fontsize="1.143" fontunit="em" color="black"></wm-label>
-                            <wm-label name="JobTitle" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.venuename" class="p text-muted"></wm-label>
-                            <wm-label caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet[$i].eventdate" class="p text-muted" name="label3" width="50%"></wm-label>
-                            <wm-label caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet[$i].eventtime" class="p text-muted" width="50%" name="label7"></wm-label>
-                        </wm-container>
-                        <wm-container class="media-right media-top" name="container4">
-                            <wm-button class="btn-transparent" iconclass="wi wi-forward fa-2x" name="button1" padding="10px unset unset unset" on-tap="Actions.goToPage_EventDetails.invoke()"></wm-button>
+                            <wm-label name="JobTitle" caption="bind:Variables.VCADB_usersExecuteEventsList.dataSet.venuename" class="p media-heading" fontsize="1.1" fontunit="em"></wm-label>
+                            <wm-composite name="composite1" fontsize="8">
+                                <wm-container class="col-xs-8" name="container5" width="100%">
+                                    <wm-datetime name="datetime1" datavalue="bind:Variables.VCADB_usersExecuteEventsList.dataSet[$i].eventdate + ' ' + Variables.VCADB_usersExecuteEventsList.dataSet[$i].eventtime " width="100%" disabled="true" readonly="true"></wm-datetime>
+                                </wm-container>
+                            </wm-composite>
                         </wm-container>
                     </wm-listtemplate>
                 </wm-list>
