--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -9,11 +9,8 @@
                 <wm-list listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-1 lg-1" class="media-list" name="event_typesList1" dataset="bind:Variables.event_types.dataSet" navigation="Pager">
                     <wm-listtemplate layout="inline" name="listtemplate1">
                         <wm-container class="media-left badge" name="container2" fontunit="em"></wm-container>
-                        <wm-container class="media-body" padding="unset unset unset 1.25em" name="container3">
-                            <wm-label name="Name" class="p media-heading" caption="bind:Variables.event_types.dataSet.dataValue" fontsize="1.5" fontunit="em" fontweight="bold"></wm-label>
-                        </wm-container>
-                        <wm-container class="media-right media-top" name="container4">
-                            <wm-button class="btn-transparent" iconclass="wi wi-forward fa-2x" name="button1" padding="5px unset unset unset" on-tap="Actions.goToPage_EventsList.invoke()"></wm-button>
+                        <wm-container class="media-body" padding="unset unset unset 1.25em" name="container3" on-tap="Actions.goToPage_EventsList.invoke()">
+                            <wm-label name="Name" class="p media-heading" caption="bind:Variables.event_types.dataSet.dataValue" fontunit="em" fontweight="bold" textalign="center"></wm-label>
                         </wm-container>
                     </wm-listtemplate>
                 </wm-list>
