--- a/src/main/webapp/pages/EditEvents/EditEvents.html
+++ b/src/main/webapp/pages/EditEvents/EditEvents.html
@@ -10,9 +10,9 @@
                     <wm-container class="media-left" name="container2"></wm-container>
                     <wm-container class="media-body" name="container3">
                         <wm-label caption="bind:Variables.VCADB_usersEventsData.dataSet.eventname" name="Name" class="p media-heading"></wm-label>
-                        <wm-button class="btn-default" caption="See who's going" type="button" margin="unset 0.5em" name="button3" iconclass="wi wi-people fa-2x" on-tap="Actions.goToPage_Attendees.invoke()"></wm-button>
+                        <wm-button class="btn-default" caption="Check In" type="button" margin="unset 0.5em" name="button3" iconclass="wi wi-people fa-2x" on-tap="Actions.goToPage_Attendees.invoke()"></wm-button>
                     </wm-container>
-                    <wm-container class="media-right media-top" width="20%" name="container9" horizontalalign="right" padding="4px 10px unset 10px">
+                    <wm-container class="media-right media-top" width="12%" name="container9" horizontalalign="right" padding="4px 10px unset 10px">
                         <wm-buttongroup name="buttongroup1">
                             <wm-button class="btn-transparent edit-list-item" caption="" name="button1" iconclass="wi wi-pencil fa-2x" margin="unset 0.2em unset unset" padding="unset unset 10px unset"></wm-button>
                             <wm-button class="btn-transparent delete-list-item" caption="" name="button2" iconclass="wi wi-trash fa-2x"></wm-button>
