--- a/src/main/webapp/pages/EventDetails/EventDetails.html
+++ b/src/main/webapp/pages/EventDetails/EventDetails.html
@@ -15,7 +15,7 @@
                             <wm-composite name="composite2">
                                 <wm-container class="col-xs-8" name="container6" width="96%">
                                     <wm-datetime name="datetime2" datavalue="bind:Variables.VCADB_usersExecuteAttendeeEventDetails.dataSet[$i].eventdate + &quot; &quot; + Variables.VCADB_usersExecuteAttendeeEventDetails.dataSet[$i].eventtime" readonly="true"
-                                        disabled="true"></wm-datetime>
+                                        disabled="true" placeholder="" showbuttonbar="false"></wm-datetime>
                                 </wm-container>
                             </wm-composite>
                         </wm-container>
