--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -4,8 +4,8 @@
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-login name="loginForm" data-ng-controller="loginFormController">
                 <wm-composite name="userNameField">
-                    <wm-label caption="Username" name="userNameLabel" class="control-label"></wm-label>
-                    <wm-text placeholder="Enter username" name="usernametext" class="app-login-username" width="100%" autocomplete="off" autocorrect="off" autocapitalize="off" updateon="default"></wm-text>
+                    <wm-label caption="Email address" name="userNameLabel" class="control-label"></wm-label>
+                    <wm-text placeholder="Enter email address" name="usernametext" class="app-login-username" width="100%" autocomplete="off" autocorrect="off" autocapitalize="off" updateon="default"></wm-text>
                 </wm-composite>
                 <wm-composite name="passwordField">
                     <wm-label caption="Password" name="passwordLabel" class="control-label"></wm-label>
