--- a/src/main/webapp/pages/AddEvent/AddEvent.html
+++ b/src/main/webapp/pages/AddEvent/AddEvent.html
@@ -9,23 +9,25 @@
                     <wm-gridrow name="gridrow1">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn1">
                             <wm-form-field name="eventtype" displayname="Event Type" show="true" primary-key="false" generator="assigned" period="false" key="eventtype" type="string" readonly="false" widget="select" inputtype="text" dataset="bind:Variables.event_types.dataSet"
-                                datafield="dataValue" displayfield="dataValue"></wm-form-field>
+                                datafield="dataValue" displayfield="dataValue" width="100%"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow2">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn2">
                             <wm-form-field name="eventname" displayname="Event" show="true" primary-key="true" generator="assigned" period="false" key="eventname" type="string" readonly="false" required="true" widget="text" maxchars="60" inputtype="text"
-                                placeholder="Enter value"></wm-form-field>
+                                placeholder="Enter value" width="100%"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow3">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                            <wm-form-field name="eventdetails" displayname="Details" show="true" primary-key="false" generator="assigned" period="false" key="eventdetails" type="string" readonly="false" required="true" widget="textarea" maxchars="255" placeholder="Enter value"></wm-form-field>
+                            <wm-form-field name="eventdetails" displayname="Details" show="true" primary-key="false" generator="assigned" period="false" key="eventdetails" type="string" readonly="false" required="true" widget="textarea" maxchars="255" placeholder="Enter value"
+                                width="100%"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow4">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn4">
-                            <wm-form-field name="eventdate" displayname="Date" show="true" primary-key="false" generator="assigned" period="false" key="eventdate" type="date" readonly="false" required="true" widget="date" placeholder="Select date" outputformat="yyyy, MMM dd"></wm-form-field>
+                            <wm-form-field name="eventdate" displayname="Date" show="true" primary-key="false" generator="assigned" period="false" key="eventdate" type="date" readonly="false" required="true" widget="date" placeholder="Select date" outputformat="yyyy, MMM dd"
+                                width="100%"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow5">
@@ -35,7 +37,8 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow6">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn6">
-                            <wm-form-field name="venues" displayname="Venues" show="true" primary-key="false" generator="assigned" period="false" key="venues" type="list" is-related="true" readonly="false" required="true" widget="select" maxchars="40" placeholder="Select venue"></wm-form-field>
+                            <wm-form-field name="venues" displayname="Venues" show="true" primary-key="false" generator="assigned" period="false" key="venues" type="list" is-related="true" readonly="false" required="true" widget="select" maxchars="40" placeholder="Select venue"
+                                width="100%"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow7">
@@ -46,7 +49,8 @@
                     </wm-gridrow>
                     <wm-gridrow name="gridrow8">
                         <wm-gridcolumn columnwidth="12" name="gridcolumn8">
-                            <wm-form-field name="fees" displayname="Fees" show="true" primary-key="false" generator="assigned" period="false" key="fees" type="integer" readonly="false" required="false" step="0" widget="currency" placeholder="Enter value"></wm-form-field>
+                            <wm-form-field name="fees" displayname="Fees" show="true" primary-key="false" generator="assigned" period="false" key="fees" type="integer" readonly="false" required="false" step="0" widget="currency" placeholder="Enter value"
+                                currency="CAD" width="100%"></wm-form-field>
                         </wm-gridcolumn>
                     </wm-gridrow>
                     <wm-gridrow name="gridrow9">
