--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -1,14 +1,4 @@
 <wm-partial data-ng-controller="leftnavPageController" name="leftnav" type="left-panel">
-    <wm-nav type="pills" layout="stacked" name="nav1">
-        <wm-nav-item name="nav_item1"></wm-nav-item>
-        <wm-nav-item name="nav_item2"></wm-nav-item>
-        <wm-nav-item name="nav_item3">
-            <wm-anchor caption="Official Twitter" iconclass="wi wi-bookmark" name="anchor3" hyperlink="bind:Variables.vcTwitter.dataSet.dataValue"></wm-anchor>
-        </wm-nav-item>
-    </wm-nav>
-    <wm-nav type="pills" layout="stacked" name="nav2">
-        <wm-nav-item name="nav_item6">
-            <wm-anchor caption="Contact Us" name="anchor6" hyperlink="bind:Variables.contactus.dataSet.dataValue"></wm-anchor>
-        </wm-nav-item>
-    </wm-nav>
+    <wm-nav type="pills" layout="stacked" name="nav1"></wm-nav>
+    <wm-anchor margin="unset 0.5em" name="anchor1" caption="Contact Us" hyperlink="bind:Variables.vcTwitter.dataSet"></wm-anchor>
 </wm-partial>
