Added email functionality New files added - [EmailService] Files modified - [Login,Register,VCADB_users,securityService,WEB-INF,profiles,pom.xml,app.properties,app.variables.json]

--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -15,7 +15,7 @@
                 <wm-composite name="remembermeField" class="app-login-rememberme">
                     <wm-checkbox caption="Remember Me" name="remembermecheck"></wm-checkbox>
                 </wm-composite>
-                <wm-button type="submit" caption="Sign up" width="100%" class="app-login-button btn-primary" name="button2" on-tap="Actions.goToPage_Register.invoke()"></wm-button>
+                <wm-button type="submit" caption="New User" width="100%" class="app-login-button btn-primary" name="button2" on-tap="Actions.goToPage_Register.invoke()"></wm-button>
             </wm-login>
         </wm-page-content>
     </wm-content>
